// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title should display children 1`] = `
<ForwardRef
  className="Title"
  ellipsis={true}
  tag="h1"
>
  content
</ForwardRef>
`;

exports[`Title should extend className 1`] = `
<ForwardRef
  className="Title noPaddingBottom"
  ellipsis={true}
  tag="h1"
>
  content
</ForwardRef>
`;

exports[`Title should handle theme 1`] = `
<Context.Provider
  value="inverted"
>
  <MuiCozyTheme
    variant="inverted"
  >
    <div
      className="styles__CozyTheme--inverted___1ygHa"
    >
      <Title>
        content
      </Title>
    </div>
  </MuiCozyTheme>
</Context.Provider>
`;
